[gd_scene load_steps=3 format=3 uid="uid://diqbb31vnnkfs"]

[ext_resource type="Script" uid="uid://cfy2wutaqjawf" path="res://tools/map_editor/map_editor_ui.gd" id="1_t15uw"]
[ext_resource type="PackedScene" uid="uid://biy2b4g2oh4o6" path="res://tools/map_editor/add_tile_form.tscn" id="2_8h18e"]

[node name="MapEditorUI" type="CanvasLayer"]
script = ExtResource("1_t15uw")
create_tile_form = ExtResource("2_8h18e")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 111.0
offset_bottom = 51.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="CreateTile" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create Tile"

[node name="Save" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="UploadFiles" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Upload Files"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CreateTile" to="." method="_on_create_tile_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/UploadFiles" to="." method="_on_upload_files_pressed"]
